--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -1,6 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Mohamed Attia Android Labs</string>
-    <string name="hello_message" translatable="false"> Hello World</string>
     <string name="hello_message">Hello World</string>
-    <string name="buttom_message">Button</string>
+    <string name="hello_message">H</string>
+    <string name="buttom_message">Botton</string>
 </resources>
