--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="hello_message"> Hello World</string>
     <string name="buttom_message">Button</string>
     <string name="spin_message">Spin flag</string>
-    <string name="button1">Spin flag</string>
-    <string name="button2">Spin flag</string>
-    <string name="button3">Spin flag</string>
+    <string name="button1">Button1</string>
+    <string name="button2">Button2</string>
+    <string name="button3">Button3</string>
 </resources>
