--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Mohamed Attia Android Labs</string>
-    <string name="hello_message"> Hello World</string>
-    <string name="buttom_message">Button</string>
+    <string name="hello_message"> Enter your email address </string>
+    <string name="buttom_message">Log in </string>
+    <string name="email_message">type your email here </string>
+    <string name="pass_message">type your password </string>
 </resources>
